--- a/src/main/resources/assets/beemancer/lang/en_us.json
+++ b/src/main/resources/assets/beemancer/lang/en_us.json
@@ -415,5 +415,43 @@
   "message.beemancer.pollen_pot.empty": "Pot is empty",
   "message.beemancer.pollen_pot.contents": "Contains %d/%d %s",
   "message.beemancer.pollen_pot.full": "Pot is full!",
-  "message.beemancer.pollen_pot.wrong_type": "This pot already contains a different pollen type"
+  "message.beemancer.pollen_pot.wrong_type": "This pot already contains a different pollen type",
+
+  "block.beemancer.extractor_heart": "Extractor Heart",
+  "message.beemancer.essence_extractor.formed": "The Essence Extractor has been formed!",
+  "message.beemancer.essence_extractor.already_formed": "The Essence Extractor is already active",
+  "message.beemancer.essence_extractor.invalid_structure": "Invalid structure - check the extractor pattern",
+
+  "item.beemancer.lesser_drop_essence": "Lesser Drop Essence",
+  "item.beemancer.drop_essence": "Drop Essence",
+  "item.beemancer.greater_drop_essence": "Greater Drop Essence",
+  "item.beemancer.perfect_drop_essence": "Perfect Drop Essence",
+  "item.beemancer.lesser_speed_essence": "Lesser Speed Essence",
+  "item.beemancer.speed_essence": "Speed Essence",
+  "item.beemancer.greater_speed_essence": "Greater Speed Essence",
+  "item.beemancer.perfect_speed_essence": "Perfect Speed Essence",
+  "item.beemancer.lesser_foraging_essence": "Lesser Foraging Essence",
+  "item.beemancer.foraging_essence": "Foraging Essence",
+  "item.beemancer.greater_foraging_essence": "Greater Foraging Essence",
+  "item.beemancer.perfect_foraging_essence": "Perfect Foraging Essence",
+  "item.beemancer.lesser_tolerance_essence": "Lesser Tolerance Essence",
+  "item.beemancer.tolerance_essence": "Tolerance Essence",
+  "item.beemancer.greater_tolerance_essence": "Greater Tolerance Essence",
+  "item.beemancer.perfect_tolerance_essence": "Perfect Tolerance Essence",
+  "item.beemancer.diurnal_essence": "Diurnal Essence",
+  "item.beemancer.nocturnal_essence": "Nocturnal Essence",
+  "item.beemancer.insomnia_essence": "Insomnia Essence",
+
+  "item.beemancer.essence.type.drop": "Drop Level",
+  "item.beemancer.essence.type.speed": "Flight Speed",
+  "item.beemancer.essence.type.foraging": "Foraging Duration",
+  "item.beemancer.essence.type.tolerance": "Tolerance",
+  "item.beemancer.essence.type.diurnal": "Diurnal",
+  "item.beemancer.essence.type.nocturnal": "Nocturnal",
+  "item.beemancer.essence.type.insomnia": "Insomnia",
+  "item.beemancer.essence.level": "Level %d",
+
+  "block.beemancer.bee_statue": "Bee Statue",
+  "message.beemancer.bee_statue.species_changed": "Species changed to %s (%d/%d)",
+  "message.beemancer.bee_statue.bee_given": "You received a %s!"
 }
